unpackaged/main/default/objects/Asset/fields/Customer_APM_Version__c.field-meta.xml
<CustomField>
    <fullName>Customer_APM_Version__c</fullName>
    <description>PM; R1814517, R2026455; Edited: Users</description>
    <label>Customer APM Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APM</fullName>
            </value>
            <value>
                <fullName>APM+</fullName>
            </value>
            <value>
                <fullName>APM+ Product Only</fullName>
            </value>
            <value>
                <fullName>APM+ Service Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>