unpackaged/main/default/objects/Asset/fields/Dedicated_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PM, IM; R1915756, R1917381; Edited: Auto, Users</description>
    <label>Dedicated Success Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot add community user to dedicated success manager field</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notContain</operation>
            <value>HelpCenter, Communit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets_DedicatedSuccessManager</relationshipName>
    <type>Lookup</type>
</CustomField>