unpackaged/main/default/objects/Asset/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PM; R1917381, Edited: users</description>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>