unpackaged/main/default/objects/Asset/fields/Strategic_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PM; R1916244; Edited: users</description>
    <label>Strategic Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets_Strategic_Relationship_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>