unpackaged/main/default/objects/Asset/recordTypes/Dynasty.recordType-meta.xml
<RecordType>
    <fullName>Dynasty</fullName>
    <active>true</active>
    <label>Dynasty</label>
</RecordType>