unpackaged/main/default/objects/Asset/recordTypes/Investment_Management.recordType-meta.xml
<RecordType>
    <fullName>Investment_Management</fullName>
    <active>true</active>
    <description>Created for R1814179</description>
    <label>Investment Management</label>
</RecordType>