unpackaged/main/default/objects/Asset/recordTypes/Property_Management.recordType-meta.xml
<RecordType>
    <fullName>Property_Management</fullName>
    <active>true</active>
    <description>Created for R1814179</description>
    <label>Property Management</label>
</RecordType>