unpackaged/main/default/objects/Asset/recordTypes/Rentlinx.recordType-meta.xml
<RecordType>
    <fullName>Rentlinx</fullName>
    <active>true</active>
    <label>Rentlinx</label>
</RecordType>